--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           </div>
           <div class="col   fadeInRight"><i id="icono" style="font-size: 70px;  color: orange" class="fa fa-wheelchair-alt" aria-hidden="true"></i> <br>
           <h3 style="color: white;">JAVASCRIPT</h3>
-          <p id="two" style=" color: #727171; margin-bottom: 10%;" class="text-center">JavaScript (JS) is a programming language mostly used to dynamically script webpages on the client side, but it is also often utilized on the server-side, using packages</p>
+          <p id="two" style=" color: #727171; margin-bottom: 10%;" class="text-center">JavaScript (JS) is a programming language mostly used to dynamically script webpages on the client side, but it is also often utilized on the server-side</p>
           <a href="https://developer.mozilla.org/en-US/docs/Glossary/JavaScript"> <button class="btn btn-outline-light">LEARN MORE&raquo;</button></a>
           </div>
           
@@ -364,7 +364,7 @@
           </div>
           <div class="col   fadeInRight"><i style="font-size: 70px;   color: orange" id="icono" class="fa fa-superpowers" aria-hidden="true"></i> <br>
           <h3 style="color: white;">NODE JS</h3>
-          <p id="two" style=" color: #727171; margin-bottom: 10%;" class="text-center">Node.js is a cross-platform JavaScript runtime environment that allows developers to build server-side and network applications with <br> JavaScript.</p>
+          <p id="two" style=" color: #727171; margin-bottom: 10%;" class="text-center">Node.js is a cross-platform JavaScript runtime environment that allows developers to build server-side and network applications with  JavaScript.</p>
           <a href="https://developer.mozilla.org/en-US/docs/Glossary/Node.js"> <button class="btn btn-outline-light">LEARN MORE&raquo;</button></a>
           </div>
           
